Generic hook for EndpointsGenerator w/ default StaticEndpointsGenerator.